# ai-agent-oversight-hub

./: .gitattributes  .gitignore  BLOG.md  Dockerfile  README.md  colab_training.ipynb  compare_agents.py  evaluate.py  inference.py  kaggle_training.ipynb  openenv.yaml  pyproject.toml  requirements.txt  train.py  training_notebook.ipynb
plots/: agent_comparison.json  eval_results.json  training_summary.json
server/: __init__.py  demo.py  environment.py  explanation_scorer.py  grader.py  main.py  models.py  scenarios.py
tests/: test_env.py
